Fixes #70, add a "script environment" panel in lab page for direct Membrane tests.

--- a/docs/lab/lab.css
+++ b/docs/lab/lab.css
@@ -29,3 +29,13 @@ body {
 {
   border: 1px dashed black;
 }
+
+section[collapsed="true"]
+{
+  display: none;
+}
+
+#Freeform-table tbody td
+{
+  border: 1px dashed black;
+}
