#102, use CSS to paint image on help buttons.

--- a/docs/gui/help.css
+++ b/docs/gui/help.css
@@ -10,5 +10,7 @@
 button.helpButton {
   padding: 0;
   border: none;
-  background: none;
+  background-image: url("icons/Tango-style_question_icon.svg");
+  width: 16px;
+  height: 16px;
 }
