--- a/docs/gui/grid-outer.css
+++ b/docs/gui/grid-outer.css
@@ -83,3 +83,14 @@
 #iframe-box {
   display: none;
 }
+
+#grid-outer button.icon {
+  padding: 0;
+  border: none;
+  width: 16px;
+  height: 16px;
+}
+
+#grid-outer button.icon[disabled] {
+  opacity: 0.3;
+}
