--- a/docs/gui/mainPanels/start.css
+++ b/docs/gui/mainPanels/start.css
@@ -4,10 +4,10 @@
 }
 
 #grid-outer-start-objectgraphs > button.deleteRow {
-  background-image: url("icons/close.svg");
+  background-image: url("../icons/close.svg");
 }
 
 #grid-outer-start-objectgraphs > button.addRow {
-  background-image: url("icons/plusicon.svg");
+  background-image: url("../icons/plusicon.svg");
   grid-column-start: -2;
 }
