#137 Each ObjectGraphHandler needs its own addValue / options panel.

--- a/docs/gui/grid-outer.css
+++ b/docs/gui/grid-outer.css
@@ -16,7 +16,7 @@
 #tabbox-files {
   display: grid;
   /* The repeat section is for new grid cells added for values to wrap */
-  grid-template-columns: 50px 100px 5px /*repeat(x, auto)*/ 5px 95px 65px;
+  grid-template-columns: 50px 100px 5px /*repeat(x, auto)*/ 5px 65px;
 }
 
 #tabbox-files > span.tabgroup:first-child {
@@ -27,8 +27,8 @@
   grid-column-start: 1;
 }
 
-#tabbox-files-addPanel + label {
-  grid-column-start: -3;
+#tabbox-files-outputPanel + label {
+  grid-column-start: -2;
 }
 
 #grid-outer .tabbar > input[type="radio"]
@@ -44,6 +44,10 @@
 
 #tabbox-files > span.tabgroup {
   background-color: #00ff00;
+  font-style: italic;
+}
+
+#tabbox-files > label[for^="graphpanel-"] {
   font-style: italic;
 }
 
@@ -69,10 +73,6 @@
   overflow: scroll;
 }
 
-#tabbox-function-traps > label {
-  display: block;
-}
-
 #grid-outer > * {
   border: 1px solid green;
 }
@@ -84,18 +84,19 @@
 
 #grid-outer[filesTab="load"] > #grid-outer-mainpanels > section.loadPanel,
 #grid-outer[filesTab="membrane"] > #grid-outer-mainpanels > section.membranePanel,
-#grid-outer[filesTab="addValue"] > #grid-outer-mainpanels > section.addPanel,
 #grid-outer[filesTab="output"] > #grid-outer-mainpanels > section.output
 {
   display: block;
 }
 
-#grid-outer[filesTab="load"] > #tabbox-function-traps > label,
-#grid-outer[filesTab="membrane"] > #tabbox-function-traps > label,
-#grid-outer[filesTab="addValue"] > #tabbox-function-traps > label,
-#grid-outer[filesTab="output"] > #tabbox-function-traps > label
+#grid-outer > #tabbox-function-traps > label
 {
   display: none;
+}
+
+#grid-outer[filesTab^="valuepanel-"] > #tabbox-function-traps > label
+{
+  display: block;
 }
 
 #grid-outer-mainpanels section.error {
