#140 GUI, provide links on shorthand cell to other distortions.

--- a/docs/gui/mainPanels/rules.css
+++ b/docs/gui/mainPanels/rules.css
@@ -12,6 +12,10 @@ button.distortions-group {
   vertical-align: top;
 }
 
+button.distortions-group:disabled {
+  opacity: 0.3;
+}
+
 #distortions-groups-dialog {
   display: none;
   position:absolute;
