#140 GUI, provide distortions panels for groups of values.

--- a/docs/gui/grid-outer.css
+++ b/docs/gui/grid-outer.css
@@ -47,7 +47,8 @@
   font-style: italic;
 }
 
-#tabbox-files > label[for^="graphpanel-"] {
+#tabbox-files > label[for^="graphpanel-"],
+#tabbox-files > label[for^="grouppanel-"] {
   font-style: italic;
 }
 
